@@ -1,4 +1,7 @@
 2014-03-24  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amtrmidx.c, server-src/planner.c: Fix memmory leak.
+
+2014-03-24  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amcheck.c: Warn if tapecycle <= runtapes.
 
 2014-03-24  Jean-Louis Martineau <martineau@zmanda.com>
